// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  height: 100%;
  background-color: #444bc9;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.c0 {
  border-radius: 3px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #ecedf9;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="c0 c1"
  color="primary"
  role="progressbar"
>
  <div
    class="c2 c1"
    color="primary"
    value="50"
  />
</div>
`;

exports[`renders correctly when a palette prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  height: 100%;
  background-color: #444bc9;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.c0 {
  border-radius: 3px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #ecedf9;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="c0 c1"
  color="primary"
  role="progressbar"
>
  <div
    class="c2 c1"
    color="primary"
    value="50"
  />
</div>
`;

exports[`renders correctly when a size prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  height: 100%;
  background-color: #444bc9;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.c0 {
  border-radius: 3px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #ecedf9;
  height: 2rem;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="c0 c1"
  color="primary"
  role="progressbar"
  style="size: large;"
>
  <div
    class="c2 c1"
    color="primary"
    value="50"
  />
</div>
`;
